--- a/emp/src/main/resources/application.properties
+++ b/emp/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 spring.application.name=emp
 
 
-spring.datasource.url= jdbc:mysql://localhost:3306/emp?createDatabaseIfNotExist=true
+spring.datasource.url= jdbc:mysql://localhost:3306/Subham_emp?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=toor
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+#change Subham_emp to emp
+#change toor to root
